Middle of position refactoring. Nothing compiles as of now.